<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context=".InsertEditInventory">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/book_details" />
            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:padding="4dp">

                <!-- Book title field -->
                <EditText
                    android:id="@+id/edit_book_title"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/book_title"
                    android:inputType="textCapWords"

                    android:maxLength="30" />

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_book_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/currency"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>

        <!-- Book category -->
        <LinearLayout
            android:id="@+id/container_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Category drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_category"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>
        <!-- Publication Date -->
        <LinearLayout
            android:id="@+id/container_publication_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/publish_date" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/edit_publication"
                    style="@style/EditorFieldStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/tap_to_select_date" />
            </LinearLayout>
        </LinearLayout>

        <!-- Quantity -->
        <LinearLayout
            android:id="@+id/container_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/quantity" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">
                    <!--decrease quantity button-->
                    <Button
                        android:id="@+id/button_qty_dec"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:background="@drawable/shadow"
                        android:text="@string/minus"
                        android:textSize="18sp" />
                    <!--quantity text view-->
                    <TextView
                        android:id="@+id/text_view_quantity"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/textColorDark"
                        android:textSize="18sp" />
                    <!--Increase quantity button-->
                    <Button
                        android:id="@+id/button_qty_increase"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@drawable/shadow"
                        android:text="@string/plus" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/supplier_details" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Supplier Name Input field -->
                <EditText
                    android:id="@+id/edit_supplier_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/supplier_name"
                    android:inputType="textCapWords"
                    android:maxLength="30" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Supplier Phone Input Field -->
                    <EditText
                        android:id="@+id/edit_supplier_phone"
                        style="@style/EditorFieldStyle"
                        android:layout_width="60dp"
                        android:layout_weight="8"
                        android:hint="@string/supplier_phone"
                        android:inputType="phone"
                        android:lines="1"
                        android:maxLength="14" />
                    <ImageButton
                        android:id="@+id/imagebtn_phone"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@mipmap/ic_phone" />
                </LinearLayout>
                <!--save and delete buttons-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">
                    <Button
                        android:id="@+id/button_save_book"
                        style="@style/buttonStyle"
                        android:layout_gravity="center"
                        android:text="@string/save_book" />
                    <Button
                        android:id="@+id/button_delete_book"
                        style="@style/buttonStyle"
                        android:text="@string/delete_book" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
