<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context=".InsertEditInventory">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/book_title_with_text" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:padding="4dp">

                <!-- Book Search title field -->
                <EditText
                    android:id="@+id/edit_search_book_title"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/seach_text"
                    android:maxLength="12" />
            </LinearLayout>
        </LinearLayout>

        <!-- Book category -->
        <LinearLayout
            android:id="@+id/container_category_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category" />

            <!-- Spinner for selecting category -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Category drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_category"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />
                <!--Button to search the query-->
                <Button
                    android:id="@+id/button_search_book"
                    style="@style/buttonStyle"
                    android:text="@string/search_book" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
