<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="2dp"
    android:background="#FEFEFE"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--Text View for book title-->
            <TextView
                android:id="@+id/text_book_title"
                style="@style/ListViewItemsHeaderStyle"
                android:layout_width="match_parent"
                android:text="Bhagvat Gita" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--For book price-->
                <TextView
                    android:id="@+id/text_price"
                    style="@style/ListViewItemsStyle"
                    android:layout_gravity="start"
                    android:text="Price:99$" />

                <!--For No. of books-->
                <TextView
                    android:id="@+id/text_quatity"
                    style="@style/ListViewItemsStyle"
                    android:layout_gravity="center_horizontal"
                    android:text="Quantity: 6" />

                <!--Sale button-->
                <Button
                    android:id="@+id/sale_button"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:background="@drawable/button_bg"
                    android:elevation="6dp"
                    android:focusable="false"
                    android:text="@string/sale"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    tools:TargetAPI="11">

                    <tag
                        android:id="@+id/sale_button_col_tag"
                        android:value="@string/sale_button_colId_value" />

                    <tag
                        android:id="@+id/sale_button_qty_tag"
                        android:value="@string/sale_button_qty_value" />
                </Button>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>